# bb-bugs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: app.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: bench_judge_load.py  check_parse.py  codex_run.sh  count_posts.py  count_threads.py  delete_null_posts.py  fetch_folder.py  fetch_specific_threads.py  gemini_run.sh  inspect_login.py  inspect_login_forms.py  inspect_thread.py  inspect_thread_205072.py  list_posts.py  list_posts_by_thread.py  list_posts_first_two.py  list_threads.py  llm_judge.py  opencode_run.sh  run.py  show_state.py  summarize_db.py  test_judge.sh  test_login.py  test_postback.py  uv_run.sh
src/bb_bugs/: __init__.py  cli.py
src/bb_bugs/fetch/: auth.py  rate_limit.py  session.py
src/bb_bugs/forum/: folder.py  thread.py
src/bb_bugs/jobs/: fetch_folder.py  fetch_threads.py
src/bb_bugs/parse/: thread_list.py  thread_page.py
src/bb_bugs/store/: db.py
